--- a/css3/src/main/webapp/position.html
+++ b/css3/src/main/webapp/position.html
@@ -17,6 +17,16 @@
  <li>position:sticky; relative와 fixed의 믹스</li>
 </ul>
 
+<section id="sec05">
+ <h2>position:sticky; relative와 fixed의 믹스</h2>
+ 
+ <div>sticky는 상위요소(body제외)가 있으면 적용 불가
+  특정 위치에서부터 고정됨. <br>
+  (z-index값을 크게 지정해서 겹친 다른 요소보다
+  항상 위로 올라오도록)
+  </div>
+</section>
+
 <section id="sec01">
  <h2>1. position:static; 기본값.</h2>
  
