--- a/css3/src/main/webapp/display.html
+++ b/css3/src/main/webapp/display.html
@@ -43,7 +43,7 @@
 <ul>
  <li>display: inline;		block인 요소를 inline으로 바꿈</li>
  <li>display: block;		inline인 요소를 inlineblock으로 바꿈</li>
- <li>display: inlime-block;	inline과 block을 합친 성격으로 바꿈</li>
+ <li>display: inline-block;	inline과 block을 합친 성격으로 바꿈</li>
  <li>display: none;			화면에서 요소를 사라지게 함</li>
 </ul>
 
